# qc

./: index.html  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: delete.rs  history.rs  lib.rs  main.rs  paste.rs  shortcut.rs  tray.rs
src/components/: HistoryItemPreview.tsx  HistoryItemSelector.tsx
src/model/: HistoryItem.ts
src/state/: HistoryItemsState.ts  SelectedItemState.ts
